--- a/css/user.css
+++ b/css/user.css
@@ -343,3 +343,51 @@
     margin-left: -70px;
 }
 
+.sendActivateKey{
+	display: inline-block;
+	float: right;
+	width: 80px;
+	border: 1px solid #A2A2A2;
+	background: #D4D4D4;
+	border-radius: 10px;
+	text-align: center;;
+	color: #aaa;
+	cursor: default;
+	moz-user-select: -moz-none;
+    -moz-user-select: none;
+    -o-user-select:none;
+    -khtml-user-select:none;
+    -webkit-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
+}
+
+.sendActivateKey:hover{
+
+}
+
+.userPanel{
+	position: absolute;
+	width: 70px;
+    background-color: rgba(0, 0, 0, 0.46);
+    color: #DEDEDE;
+    border-radius: 0px 0px 5px 5px;
+    text-align: center;
+    left: -5px;
+    top: 10px;
+    display: none;
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+.userPanel a:hover{
+	color: #DEDEDE;
+}
+
+.userandlogout{
+	position: relative;
+}
+
+.userName{
+	cursor: pointer;
+}
