--- a/css/user.css
+++ b/css/user.css
@@ -14,6 +14,7 @@
 .w100{width:280px !important}
 .fl{float:left}
 .rt{float:right}
+.mf20{margin-left: 20px;}
 .mt20{margin-top:20px;}
 .mt15{margin-top:15px;}
 .gr{ color:#90af48}
