--- a/css/user.css
+++ b/css/user.css
@@ -21,6 +21,7 @@
 .pdl20{padding-left:20px;}
 .mb20{margin-bottom:20px;}
 .mb10{margin-bottom:10px;}
+.mgr0{margin-right:0px!important;}
 .pd5{padding:7px 0}
 .pd20{padding:20px; box-sizing:border-box}
 .wbg{ background-color:#fff}
@@ -441,4 +442,42 @@
 
 .vertical_align_top{
 	vertical-align:top;
+}
+
+.replyInputDiv{
+	position: relative;
+}
+
+.replyInput{
+
+}
+
+.addCommentUsername{
+	position: absolute;
+    top: 13px;
+    left: 10px;
+    color: #9e9e9e;
+}
+
+.replybtn{
+    /* height: 100%; */
+    color: white!important;
+    margin-right: 0px!important;
+    margin-top: 5px;
+    line-height: 25px;
+    text-align: center;
+    cursor: pointer;
+    /* border: 1px solid #ccc; */
+}
+
+.replyUserDetail{
+	cursor: pointer;
+}
+
+.likeOrDislike{
+	text-align: center;
+}
+
+.likeBtn,.dislikeBtn{
+	
 }
