--- a/static/h-ui.admin/css/index.css
+++ b/static/h-ui.admin/css/index.css
@@ -10,10 +10,10 @@
 .z_photo{
 	
 }
-.z_photo .z_file{
+.z_photo .z_file,.z_photo .z_file2{
 	position: relative;
 }
-.z_file  .file{
+.z_file  .file,.z_file2  .file2{
 	width: 100%;
 	height: 100%;
 	opacity: 0;
@@ -25,7 +25,7 @@
 }
 .z_photo .up-section{
 	position: relative;
-	margin-right: 20px;
+	margin-right: 45px;
 	margin-bottom: 20px;
 }
 .up-section .close-upimg{
